examples/library-usage/syntax-errors/go.mod
module example/syntax-errors

go 1.25

replace github.com/nsxbet/sql-reviewer => ../../..

require github.com/nsxbet/sql-reviewer v0.0.0-00010101000000-000000000000

require (
	github.com/antlr4-go/antlr/v4 v4.13.1 // indirect
	github.com/gedhean/parser v0.0.1 // indirect
	github.com/gedhean/mysql-parser v0.0.0-20251028130751-f72cf5f35373 // indirect
	github.com/pkg/errors v0.9.1 // indirect
	golang.org/x/exp v0.0.0-20240506185415-9bf2ced13842 // indirect
	gopkg.in/yaml.v3 v3.0.1 // indirect
)
